--- a/index.html
+++ b/index.html
@@ -11,37 +11,30 @@
 <script>
 
 function handleFiles(files) {
-  for (var i = 0; i < files.length; i++) {
-    var file = files[i];
-  
+  var file = files[0];
 
-    var reader = new FileReader();
-    reader.onload = function(e) {
-        var saveFile = new SaveFile();
-        var buffer = e.target.result;
-        saveFile.cargar(buffer);
-        dumpFile(saveFile);
-       };
+  var reader = new FileReader();
+  reader.onload = function(e) {
+      var saveFile = new SaveFile();
+      var buffer = e.target.result;
+      saveFile.cargar(buffer);
+      dumpFile(saveFile);
+     };
 
-    reader.readAsArrayBuffer(file);
-  }
+  reader.readAsArrayBuffer(file);
 }
 
 
 function updateSize() {
-  var nBytes = 0,
-      oFiles = document.getElementById("uploadInput").files,
-      nFiles = oFiles.length;
-  for (var nFileId = 0; nFileId < nFiles; nFileId++) {
-    nBytes += oFiles[nFileId].size;
-  }
+  var oFiles = document.getElementById("uploadInput").files;
+  var file = oFiles[0];
+  var nBytes = file.size;
   var sOutput = nBytes + " bytes";
   // optional code for multiples approximation
   for (var aMultiples = ["KiB", "MiB", "GiB", "TiB", "PiB", "EiB", "ZiB", "YiB"], nMultiple = 0, nApprox = nBytes / 1024; nApprox > 1; nApprox /= 1024, nMultiple++) {
     sOutput = nApprox.toFixed(3) + " " + aMultiples[nMultiple] + " (" + nBytes + " bytes)";
   }
   // end of optional code
-  document.getElementById("fileNum").innerHTML = nFiles;
   document.getElementById("fileSize").innerHTML = sOutput;
 }
 
@@ -69,9 +62,9 @@ function dumpFile(saveFile) {
 </script>
 </head>
 
-<body onload="updateSize();">
+<body>
 <form>
-<p><input id="uploadInput" type="file" onchange="updateSize();handleFiles(this.files);" multiple> selected files: <span id="fileNum">0</span>; total size: <span id="fileSize">0</span></p>
+<p><input id="uploadInput" type="file" onchange="updateSize(); handleFiles(this.files);">file size: <span id="fileSize">0</span></p>
 </form>
 <div id="dump"></div>
 </body>
